# Mandelbrot

./: CMakeLists.txt  README.md  conanfile.txt  makefile
include/: image.h  mandelbrot-helper.h  video.h
src/: CMakeLists.txt  image.c  image.cpp  image.h  image.hpp  main.cpp  mandelbrot-helper.c  mandelbrot-helper.cpp  mandelbrot-helper.h  mandelbrot-helper.hpp  mandelbrot-omp.c  mandelbrot-serial.c  video.c  video.cpp  video.h  video.hpp
